style.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  font-family: 'Merriweather', serif;
  --lightgreen: #52bd0f;
  --red: #990011;
  --blue: #1027d5;
  --bgbeige: #A37767;
  --bgdarker: #8f6356;
}

body {
  position: relative;
  width: 100vw;
  min-height: 100vh;
  background: var(--bgbeige);
  padding: 1vh 1vw;
}

header {
  display: flex;
  justify-content: center;
  align-items: center;
}

header h1 {
  width: fit-content;
  line-height: 100%;
  background-color: var(--bgdarker);
  border: 3px solid var(--blue);
  border-radius: 5px;
  padding: 1%;
  font-size: clamp(30px, 6vmin, 68px);
  color: var(--blue);
  margin-bottom: 2vmin;
  text-decoration: underline;
}

h3 {
  font-size: clamp(14px, 3vmin, 30px);
  text-decoration: underline;
  margin-bottom: .25vmin;
}

.rules-description {
  width: 98%;
  height: fit-content;
  margin-bottom: 2vmin;
  border: 3px solid var(--blue);
  border-radius: 5px;
  padding: 3vmin;
  background-color: var(--bgdarker);
  font-size: max(1.75vmin, 12px);
  color: var(--blue);
}

.rules-description p {
  margin-bottom: .5em;
}

#start-container {
  display: flex;
  justify-content: center;
}

button {
  padding: 1%;
  width: fit-content;
  height: fit-content;
  border: 2px solid var(--blue);
  border-radius: 5px;
  background-color: var(--bgdarker);
  color: var(--blue);
  box-sizing: border-box;
  margin: 1px;
}

button:hover {
  border: 3px solid var(--blue);
  /* font-weight: bold; */
  margin: 0;
}

button:active {
  border: 2px solid var(--blue);
  font-weight: normal;
  background-color: var(--bgbeige);
  margin: 1px;
}

.carousel {
  background-color: var(--bgdarker);
  height: 40vh;
  min-height: 200px;
  max-width: 937px;
  margin: 0 auto;
  padding: 1%;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  align-items: center;
  border: 3px solid var(--blue);
  border-radius: 5px;
}

.carousel-header {
  font-size: min(1.5em, 28px);
  color: var(--blue);
}

.carousel-monster-container {
  height: 60%;
  width: 90%;
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.carousel-img-container {
  height: 100%;
  width: 60%;
  display: flex;
  justify-content: center;
  align-items: center;
}

.carousel-img {
  height: 100%;
  border-radius: 5px;
  border: 2px solid var(--blue);
}

.carousel-monster-stats {
  height: 100%;
  width: 37%;
  display: flex;
  flex-direction: column;
  justify-content: center;
  border: 2px solid var(--blue);
  border-radius: 5px;
  padding: 2%;
  color: var(--blue);
}

.carousel-monster-stats p {
  font-size: clamp(12px, 2vmin, 22px);
}

#carousel-button-container {
  width: 40%;
  display: flex;
  justify-content: space-between;
  margin-top: 1%;
}

.battle {
  height: 80vh;
  display: flex;
  justify-content: space-evenly;
  padding-top: 4vh;
}

#player-monster {
  border: 3px solid var(--lightgreen);
  color: var(--lightgreen);
}

#player-monster img {
  border: 2px solid var(--lightgreen);
}

#player-monster div.description {
  border: 2px solid var(--lightgreen);
}

#enemy-monster {
  border: 3px solid var(--red);
  color: var(--red);
}

#enemy-monster img {
  border: 2px solid var(--red);
}

#enemy-monster div.description {
  border: 2px solid var(--red);
}

.monster {
  background-color: var(--bgdarker);
  height: 90%;
  width: 30%;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  padding: 2%;
  border-radius: 5px;
}

.img {
  max-width: 95%;
  max-height: 70%;
  margin-bottom: 2em;
  border-radius: 5px;
}

.description {
  width: 98%;
  height: fit-content;
  border-radius: 5px;
  padding: 1%;
}

.description p {
  font-size: clamp(8px, 2vmin, 22px);
}

.healthbar {
  width: 90%;
  height: 3vh;
  border-radius: 5px;
}

#player-healthbar {
  border: 1px solid var(--lightgreen);
}

#enemy-healthbar {
  border: 1px solid var(--red);
}

.healthbar-fill {
  height: 100%;
  width: 100%;

  transition: width 1.5s;
}

#player-healthbar-fill {
  background-color: var(--lightgreen);
}

#enemy-healthbar-fill {
  background-color: var(--red);
}

#battle-log {
  height: fit-content;
  max-height: 90%;
  width: 30%;
  padding: .25em;
  overflow: hidden;
  font-size: max(3vw, 14px);
  display: flex;
  flex-direction: column-reverse;
}

#battle-log p {
  font-size: min(.75em, 22px);
  margin-bottom: .25em;
}

.player-log {
  color: var(--lightgreen);
}

.enemy-log {
  color: var(--red)
}

.dim {
  opacity: 0.25;

  transition: opacity .5s;
}

.modal {
  background-color: rgb(163, 119, 103, 0.4);
  position: fixed;
  top: 0;
  left: 0;
  height: 100%;
  width: 100%;
  z-index: 1;
  overflow: auto;
}

.modal-textbox {
  background-color: var(--bgdarker);
  height: 40vh;
  width: 60vw;
  max-width: 800px;
  margin: 30vh auto;
  padding: 2%;
  border-radius: 5px;
  display: flex;
  flex-direction: column;
  justify-content: space-around;
  align-items: center;
}

.modal-textbox h1 {
  font-size: min(6vmin, 58px);
}

.modal-win {
  border: 3px solid var(--lightgreen);
  color: var(--lightgreen);
}

.modal-lose {
  border: 3px solid var(--red);
  color: var(--red);
}

.modal-button {
  width: fit-content;
}

.hide {
  display: none;
}

footer {
  width: 98%;
  padding: 1vh;
  position: absolute;
  bottom: 0;
  display: flex;
  justify-content: center;
  color: var(--blue);
  font-size: 2vmin;
}

footer span {
  border: 2px solid var(--blue);
  border-radius: 5px;
  background-color: var(--bgdarker);
  padding: .5%;
}

@media (max-width: 600px) {
  .carousel {
    height: fit-content;
  }

  .carousel-monster-container {
    flex-direction: column;
    justify-content: flex-start;
  }

  .carousel-img {
    height: 20vh;
    margin: 5% 0;
  }

  .carousel-monster-stats {
    width: 96%;
  }

  .monster {
    padding: 35% 2%;
    justify-content: space-between;
  }

  .healthbar {
    height: 1.5vh;
  }

  .monster h3 {
    font-size: 10px;
  }
}

